2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the error enumeration into the shared header

	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.h: moved the enumeration
	* tests/double-free.c: dropped the #define replacement for the
	enumeration

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Renamed the error quark to match the file and library name

	* engine/sapwood-client.c,
	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: renamed the quark

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the error quark into libsapwood-client.la

	* engine/sapwood-client.c (sapwood_pixmap_error_get_quark),
	* engine/sapwood-client.h: added the error quark
	* engine/sapwood-pixmap.c,
	* engine/sapwood-pixmap.h: delegate the error quark to the client
	library
	* tests/double-free.c: drop the error quark hack; use the quark from
	the client library

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Create libsapwood-client.la to be shared between the engine and the
	test cases

	* engine/Makefile.am: create libsapwood-client.la
	* tests/Makefile.am: link against libsapwood-client.la

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the structure definition for the SapwoodPixmap into a private
	header

	* engine/Makefile.am: include the private header file
	* engine/sapwood-pixmap-priv.h: moved the structure definition to this
	file
	* engine/sapwood-pixmap.c: include the private header instead of the
	public one; dropped the structure definition
	* tests/double-free.c: include the private header file instead of
	using the copied structure definition

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Added files for reusable client code to connect to the server

	* engine/Makefile.am: added the files
	* engine/sapwood-client.c,
	* engine/sapwood-client.h: new skeletons

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Support the regular xvfb "output" of the testing framework

	* tests/double-free.c (main),